# Claude_pool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  README.md  REFACTOR_BASELINE.md  REFACTOR_PLAN.md  SKILL.md  claude-pool.sh  example_pool.json  hello.txt  package-lock.json  pyproject.toml  quickstart.sh  team-cli.sh  test_pool.json
.antigravitycli/: 4e129c61-78c9-4ae2-be31-36b2ba123872.json
.github/workflows/: ci.yml
claude_pool/: __main__.py  api.py  api_models.py  cli_detector.py  concurrency.py  config.py  database.py  executor.py  models.py  parser.py  projects.json  storage.py  tui.py
claude_pool/frontend/: index.html
docs/: N8N_INTEGRATION.md  ROADMAP.md  STATUS.md  plan.md  spec.md
examples/: README.md  example_pool.json  pool_backup.json
frontend/: index.html
n8n_workflows/: README.md  create_github_pr.json  notify_slack.json  read_completed_tasks.json  trigger_ci.json
scripts/: migrate_db.py
team_cli/: __init__.py  __main__.py  api.py  api_helpers.py  api_models.py  cli_detector.py  cli_executors.py  cli_profiles.toml  concurrency.py  config.py  database.py  embedding_classifier.py  executor.py  migrate_chats_to_projects.py  migrations.py  models.py  parser.py  pool_driver.py  priority_engine.py  projects.json  routing.py  signal_handler.py  storage.py  tui.py
team_cli/frontend/: index.html  manifest.json
team_cli/frontend/css/: components.css  layout.css  tokens.css
team_cli/frontend/js/: api.js  router.js  store.js  ws.js
team_cli/frontend/js/views/: chat.js  queue.js  settings.js  sidebar.js  taskdetail.js  thread.js
team_cli/frontend/tests/: test_frontend.js
team_cli/routers/: __init__.py  admin.py  chats.py  cli_commands.py  messages.py  pools.py  projects.py  settings.py  skills.py  tasks.py
team_cli/skills/: __init__.py
team_cli/skills/multi_step_planner/: __init__.py  evaluator.py  executor.py  generator.py  models.py  utils.py
tests/: conftest.py  test_api.py  test_api_chats.py  test_api_clis.py  test_api_db.py  test_api_helpers.py  test_api_integration.py  test_api_messages.py  test_api_messages_pagination.py  test_api_phase3.py  test_api_phase5_backend.py  test_api_priority.py  test_api_projects.py  test_api_skill.py  test_api_stop.py  test_aria_semantics.py  test_build_command.py  test_chat_concurrency.py  test_chat_view.py  test_ci_config.py  test_cli_commands_api.py  test_cli_commands_put.py  test_cli_detector.py  test_cli_manager.py  test_concurrency.py  test_config.py  test_context_formatting.py  test_dark_mode.py  test_database.py  test_design_tokens.py  test_e2e.py  test_e2e_db.py  test_embedding_classifier.py  test_execute_message.py  test_executor.py  test_executor_base.py  test_executor_bugs.py  test_executor_db.py  test_executor_phase3.py  test_executor_real_subprocess.py  (+55 more)
tests/fixtures/: fake_claude.py  fake_rate_limit.py
