[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-pool"
version = "1.1.1"
description = "TUI application for managing sequential Claude Code task pools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Claude Pool Contributors"}
]
dependencies = [
    "textual>=0.47.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["claude_pool*"]

[tool.setuptools.package-data]
claude_pool = ["frontend/*.html", "n8n_workflows/*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
claude-pool = "claude_pool.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "claude_pool.tui"
ignore_errors = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=claude_pool --cov-report=term-missing"
