[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-cli"
version = "1.2.7"
description = "TUI application for managing sequential AI CLI task pools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TeamCLI Contributors"}
]
dependencies = [
    "textual>=0.47.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
]

[tool.setuptools.packages.find]
include = ["team_cli*"]

[tool.setuptools.package-data]
team_cli = ["frontend/*.html", "n8n_workflows/*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.4.0",
]

[project.scripts]
team-cli = "team_cli.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "team_cli.tui"
ignore_errors = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=team_cli --cov-report=term-missing"
